data/derived/comb/progs/unify/prog5109.ml.out
Characters 93-96:
  | h::t -> h + digitalRoot (digits(t));;
                                   ^^^
Error: This expression has type int list
       but an expression was expected of type int
